NOW contact form working

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,7 +4,7 @@
   content="width=device-width, initial-scale=1, shrink-to-fit=no"
 />
 
-<title>Mark Cross</title>
+<title>Mark Cross's Portfolio</title>
 
 <!-- Styling -->
 <link href="css/bootstrap.min.css" rel="stylesheet" />
