Updated logo, images, and minor styling

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,7 +7,6 @@
     <header><%- include('../partials/header'); %></header>
 
     <main role="main" class="inner cover">
-
       <!-- Landing  -->
       <article id="heroDiv">
         <h1 class="cover-heading" id="imMark">Hi. I'm Mark.</h1>
@@ -33,7 +32,7 @@
         <div class="row">
           <article class="col-md-12">
             <figure class="image is-1x1">
-              <img id="headshot" src="./assets/images/headshot.png" />
+              <img id="headshot" src="img/headshot.png" />
               <div id="introContent">
                 <p class="title">Who is that handsome devil?</p>
                 <p id="bioText">
@@ -55,7 +54,7 @@
       <div class="container hide indexTabs" id="stackDiv">
         <div class="row">
           <article class="col-md-4 stackContent content">
-            <h1 class="title">Languages</h1>
+            <h1 class="title">Languages & Frameworks</h1>
             <h3 class="subtitle">Dream it</h3>
             <div class="content">
               <ul>
@@ -68,7 +67,7 @@
           </article>
 
           <article class="col-md-4 stackContent content">
-            <h1 class="title">Tools</h1>
+            <h1 class="title">Tools & Libraries</h1>
             <h3 class="subtitle">Build it</h3>
             <div class="content">
               <!-- Content -->
@@ -85,7 +84,7 @@
             </div>
           </article>
           <article class="col-md-4 stackContent content">
-            <h1 class="title">Sales</h1>
+            <h1 class="title">Sales & Operations</h1>
             <h3 class="subtitle">Monetize it</h3>
             <div class="content">
               <!-- Content -->
