--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,11 +6,14 @@
   display: none;
 }
 
+.credits {
+  text-align: center;
+}
 /* Links */
 a,
 a:focus,
 a:hover {
-  color: #513ba8;
+  color: #2a4bad;
 }
 
 /* .calendly {
@@ -34,9 +37,8 @@ a:hover {
 body,
 html {
   display: grid;
-  color: rgb(25, 0, 122);
-  text-shadow: 0 0.05rem 0.1rem #6c879f;
-  background-image: url(./images/hero2.jpg);
+  color: #000426;
+  background-image: url(./../img/hero.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -73,15 +75,14 @@ html {
 .nav-masthead .nav-link {
   padding: 0.25rem 0;
   font-weight: 700;
-  /* color: rgba(255, 255, 255, 0.5); */
-  color: rgba(25, 0, 122);
+  color: #000426;
   background-color: transparent;
   border-bottom: 0.25rem solid transparent;
 }
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  border-bottom-color: #513ba8;
+  border-bottom-color: #000426;
 }
 
 .nav-masthead .nav-link + .nav-link {
@@ -91,13 +92,13 @@ html {
 #contactModal {
   padding: 0.25rem 0;
   font-weight: 700;
-  color: rgb(25, 0, 122);
+  color: #000426;
   background-color: transparent;
   border-bottom: 0.25rem solid transparent;
 }
 
 .modal-content {
-  background-color: rgba(171, 152, 137, 0.9);
+  background-color: #f2d5bb;
 }
 
 .inner {
@@ -107,7 +108,7 @@ html {
 .ctcLinks {
   margin-left: 1.5rem;
   font-size: 1.5rem;
-  color: rgb(25, 0, 122);
+  color: #000426;
 }
 
 @media (min-width: 48em) {
@@ -121,6 +122,9 @@ html {
 
 /* Cover */
 .cover {
+  display: grid;
+  align-content: center;
+  text-align: center;
   padding: 0 1.5rem;
 }
 .cover .btn-lg {
@@ -152,8 +156,7 @@ html {
 h1,
 h2,
 h3 {
-  color: rgba(25, 0, 122);
-  text-shadow: 0 0.05rem 0.1rem #6c879f;
+  color: #000426;
 }
 
 /* Stack */
@@ -166,30 +169,30 @@ article ul {
 
 /* Footer */
 .mastfoot {
-  color: rgba(171, 152, 137, 0.5);
+  color: #f2d5bb;
 }
 
 footer .nav-item {
-  background-color: rgba(224, 187, 134, 0.75);
+  background-color: #f2d5bb;
   padding: 1rem 0;
   border-radius: 2rem;
 }
 
 footer span {
-  color: rgb(54, 48, 105);
+  color: #000426;
 }
 
 /* -------------------
 * Portfolio
 ------------------- */
 .portfolioHeader {
-  color: rgb(54, 48, 105);
+  color: #000426;
+  text-align: center;
 }
 .card {
-  color: rgb(54, 48, 105);
-  text-shadow: 0 0.05rem 0.1rem #6c879f;
-  box-shadow: inset 0 0 5rem #6c879f;
-  border: 1px solid #6c879f;
+  color: #000426;
+  box-shadow: inset 0 0 5rem #f2d5bb;
+  border: 1px solid #f2d5bb;
 }
 .card img {
   max-width: 100%;
@@ -197,7 +200,7 @@ footer span {
 }
 
 .card-text a {
-  color: rgb(54, 48, 105);
+  color: #000426;
 }
 
 #portContainer {
@@ -212,7 +215,7 @@ footer span {
 @media only screen and (max-width: 600px) {
   #introContent,
   #getToKnowMe {
-    background-color: #d8dde3;
+    background-color: #f2d5bb;
   }
   #headshot {
     max-width: 25%;
