--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,1 +1,15 @@
-<p class="text-center text-muted">© Copyright 2020 Mark Cross</p>
+<div class="credits">
+<p class="text-center text-muted">Created by Mark Cross | Copyright © 2020</p>
+<span class="text-center text-muted" id="footerid"
+  >Photo by
+  <a
+    href="https://unsplash.com/@kovacsz1?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText"
+    >Z S</a
+  >
+  on
+  <a
+    href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText"
+    >Unsplash</a
+  ></span
+>
+</div>
