--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,11 +3,7 @@
   <header class="masthead mb-auto">
     <div class="inner">
       <!-- TODO Update logo and fix path -->
-      <img
-        class="masthead-brand"
-        src="./assets/images/logo.png"
-        alt="Mark's logo"
-      />
+      <img class="masthead-brand" src="img/logo.png" alt="Mark's logo" />
       <nav class="nav nav-masthead justify-content-center">
         <!-- TODO Update links w/ res.render -->
         <a class="nav-link active" href="/">Home</a>
@@ -53,7 +49,7 @@
                     >Put time on my calendar by clicking here</a
                   ><br />
                 </p>
-      <!-- TODO Add form validation -->
+                <!-- TODO Add form validation -->
                 <form name="contact">
                   <div class="form-group">
                     <label for="formName">Name</label>
@@ -79,7 +75,13 @@
                       rows="3"
                     ></textarea>
                   </div>
-                  <button type="submit" class="btn btn-primary" id="contactSubmit">Submit</button>
+                  <button
+                    type="submit"
+                    class="btn btn-primary"
+                    id="contactSubmit"
+                  >
+                    Submit
+                  </button>
                 </form>
               </div>
             </div>
