--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -172,7 +172,7 @@ article ul {
   color: #f2d5bb;
 }
 
-footer .nav-item {
+.nav-pill {
   background-color: #f2d5bb;
   padding: 1rem 0;
   border-radius: 2rem;
