Contact form will submit, close, and rest

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -48,7 +48,7 @@
                   ><br />
                 </p>
                 <!-- TODO Add form validation -->
-                <form name="contact">
+                <form name="contact" id="contactForm">
                   <div class="form-group">
                     <label for="formName">Name</label>
                     <input type="text" class="form-control" id="formName" />
