--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -17,7 +17,7 @@
       <%- include('../partials/stack'); %>
 
       <!-- Brewing -->
-      <%- include('../partials/brewing'); %>
+      <!-- <%- include('../partials/brewing'); %> -->
     </main>
     <!-- Nav Pills -->
     <%- include('../partials/pills'); %>
