--- a/views/partials/projects.ejs
+++ b/views/partials/projects.ejs
@@ -1,5 +1,5 @@
 <!-- TODO Iterate over the database -->
-
+<!-- TODO Vertical pills for navigation? -->
 <!--! Hard Code Below -->
 <div class="container-fluid">
   <div class="container wrapper">
