--- a/views/partials/pills.ejs
+++ b/views/partials/pills.ejs
@@ -1,28 +1,24 @@
-<div class="footer mt-auto py-3">
-  <ul class="container nav nav-pills nav-justified">
-    <li class="nav-pill nav-item">
-      <a id="introBtn" href="#">
-        <span class="icon is-small"
-          ><i class="fas fa-user-secret" aria-hidden="true"></i
-        ></span>
-        <span>Who is this guy?</span>
-      </a>
+<div class="containter">
+  <ul class="nav row nav-pills">
+    <li class="col-xs-12 col-md-5 nav-pill nav-item" id="introBtn">
+      <span class="icon is-small"
+        ><i class="fas fa-user-secret" aria-hidden="true"></i
+      ></span>
+      <span>Who is this guy?</span>
     </li>
-    <li class="nav-pill nav-item">
-      <a id="stackBtn" href="#">
-        <span class="icon is-small"
-          ><i class="fas fa-laptop-code" aria-hidden="true"></i
-        ></span>
-        <span>Tech Stack</span>
-      </a>
+    <li class="col-sm-12 col-md-5 nav-pill nav-item" id="stackBtn">
+      <span class="icon is-small"
+        ><i class="fas fa-laptop-code" aria-hidden="true"></i
+      ></span>
+      <span>Tech Stack</span>
     </li>
-    <li class="nav-pill nav-item">
+    <!-- <li class="nav-pill nav-item">
       <a id="brewBtn" href="#">
         <span class="icon is-small"
           ><i class="fas fa-beer" aria-hidden="true"></i
         ></span>
         <span>Brewing</span>
       </a>
-    </li>
+    </li> -->
   </ul>
 </div>
