--- a/views/partials/projects.ejs
+++ b/views/partials/projects.ejs
@@ -23,14 +23,14 @@
             </p>
           </div>
           <div class="card-footer">
-            <button class="card-text">
+            <button class="card-text projBtn">
               <a
                 href="https://gitjobs-application-tracker.herokuapp.com/"
                 target="_blank"
                 >See it Live</a
               >
             </button>
-            <button class="card-text">
+            <button class="card-text projBtn">
               <a
                 href="https://github.com/jallan07/gitjobs-application-tracker"
                 target="_blank"
@@ -53,12 +53,12 @@
             </p>
           </div>
           <div class="card-footer">
-            <button class="card-text">
+            <button class="card-text projBtn">
               <a href="https://markdcross.github.io/perspektiv/" target="_blank"
                 >See it Live</a
               >
             </button>
-            <button class="card-text">
+            <button class="card-text projBtn">
               <a href="https://github.com/markdcross/perspektiv" target="_blank"
                 >See the Code</a
               >
@@ -81,12 +81,12 @@
             </p>
           </div>
           <div class="card-footer">
-            <button class="card-text">
+            <button class="card-text projBtn">
               <a href="https://bc-hw13-burger.herokuapp.com/" target="_blank"
                 >See it Live</a
               >
             </button>
-            <button class="card-text">
+            <button class="card-text projBtn">
               <a href="https://github.com/markdcross/burger" target="_blank"
                 >See the Code</a
               >
@@ -110,12 +110,12 @@
             </p>
           </div>
           <div class="card-footer">
-            <button class="card-text">
+            <button class="card-text projBtn">
               <a href="https://fancy-post-its.herokuapp.com/" target="_blank"
                 >See it Live</a
               >
             </button>
-            <button class="card-text">
+            <button class="card-text projBtn">
               <a
                 href="https://github.com/markdcross/fancy-post-its"
                 target="_blank"
