--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,7 +5,7 @@
 />
 
 <title>Mark Cross's Portfolio</title>
-
+<link rel="shortcut icon" type="image/jpg" href="img/favicon.ico" />
 <!-- Styling -->
 <link href="css/bootstrap.min.css" rel="stylesheet" />
 <link
