--- a/views/partials/stack.ejs
+++ b/views/partials/stack.ejs
@@ -10,6 +10,7 @@
           <li>CSS</li>
           <li>JavaScript</li>
           <li>SQL</li>
+          <li>NoSQL</li>
         </ul>
       </div>
     </article>
@@ -23,11 +24,12 @@
           <li>Git & GitHub</li>
           <li>Bootstrap/Bulma/Materialize</li>
           <li>jQuery/AJAX</li>
-          <li>Node.js/Express/Sequelize</li>
-          <li>MySql</li>
+          <li>Node.js/Express</li>
+          <li>MySQL/MongoDB</li>
+          <li>Sequelize/Mongoose</li>
           <li>Jest/Mocha</li>
           <li>Postman</li>
-          <li>Heroku/Netlify</li>
+          <li>Heroku/Netlify/Digital Ocean</li>
         </ul>
       </div>
     </article>
