Minor edits, broke out modal into ejs partial

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -35,90 +35,11 @@
           >Contact</a
         >
       </ul>
-      <!-- CONTACT MODAL -->
-      <div class="modal" id="contactModal" tabindex="-1">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Give me a shout</h5>
-              <button
-                type="button"
-                class="close"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              >
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <p>
-                Email: markdcross@gmail.com <br />
-                Phone: 410.271.3079 <br />
-                Calendly:
-                <a
-                  href="https://calendly.com/markdcross/15min"
-                  target="_blank"
-                  class="calendly"
-                  >Put time on my calendar</a
-                ><br />
-              </p>
-              <!-- TODO Add form validation -->
-              <form name="contact" id="contactForm">
-                <div class="form-group">
-                  <label for="formName">Name</label>
-                  <input type="text" class="form-control" id="formName" />
-                </div>
-                <div class="form-group">
-                  <label for="formEmail">Email address</label>
-                  <input
-                    type="email"
-                    class="form-control"
-                    id="formEmail"
-                    aria-describedby="emailHelp"
-                  />
-                  <small id="emailHelp" class="form-text"
-                    >I'll never share your email with anyone else.</small
-                  >
-                </div>
-                <div class="form-group">
-                  <label for="formMessage">Message</label>
-                  <textarea
-                    class="form-control"
-                    id="formMessage"
-                    rows="3"
-                  ></textarea>
-                </div>
-                <button
-                  type="submit"
-                  class="btn btn-primary"
-                  id="contactSubmit"
-                >
-                  Submit
-                </button>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- /Modal -->
-      <a
-        href="https://github.com/markdcross"
-        target="_blank"
-        class="githubBtn button ctcLinks"
-      >
-        <span class="icon">
-          <i class="fab fa-github"></i>
-        </span>
-      </a>
-      <a
-        href="https://www.linkedin.com/in/markdcross/"
-        target="_blank"
-        class="githubBtn button ctcLinks"
-      >
-        <span class="icon">
-          <i class="fab fa-linkedin"></i>
-        </span>
-      </a>
+      <!-- Contact Modal -->
+      <%- include('../partials/modal'); %>
+
+      <!-- Contact links -->
+      <%- include('../partials/ctcLinks'); %>
     </div>
   </div>
 </nav>
