--- a/views/partials/stack.ejs
+++ b/views/partials/stack.ejs
@@ -1,6 +1,7 @@
 <!-- Tech Stack -->
 <div class="container hide indexTabs" id="stackDiv">
   <div class="row">
+
     <article class="col-md-4 stackContent content">
       <h1 class="title">Languages & Frameworks</h1>
       <h3 class="subtitle">Dream it</h3>
@@ -19,7 +20,6 @@
       <h1 class="title">Tools & Libraries</h1>
       <h3 class="subtitle">Build it</h3>
       <div class="content">
-        <!-- Content -->
         <ul>
           <li>Git & GitHub</li>
           <li>Bootstrap/Bulma/Materialize</li>
@@ -33,17 +33,17 @@
         </ul>
       </div>
     </article>
+    
     <article class="col-md-4 stackContent content">
       <h1 class="title">Sales & Operations</h1>
       <h3 class="subtitle">Monetize it</h3>
       <div class="content">
-        <!-- Content -->
         <ul>
           <li>Solutions Selling</li>
           <li>Challenger Selling</li>
-          <li>Lean Six Sigma Yellow Belot</li>
-          <li>Salesforce.com & Pipedrive CRM</li>
-          <li>Outreach.io & SalesLoft</li>
+          <li>Lean Six Sigma Yellow Belt</li>
+          <li>Salesforce.com & various CRMs</li>
+          <li>Outreach.io/SalesLoft</li>
           <li>Marketing automation platforms</li>
           <li>Sales enablement platforms</li>
         </ul>
