--- a/views/partials/modal.ejs
+++ b/views/partials/modal.ejs
@@ -14,8 +14,12 @@
       </div>
       <div class="modal-body">
         <p>
-          Email: markdcross@gmail.com <br />
-          Phone: 410.271.3079 <br />
+          Email:
+          <a href="mailto:markdcross@gmail.com">markdcross@gmail.com</a>
+          <br />
+          Phone:
+          <a href="tel:+14102713079">410.271.3079</a>
+          <br />
           Calendly:
           <a
             href="https://calendly.com/markdcross/15min"
@@ -24,6 +28,7 @@
             >Put time on my calendar</a
           ><br />
         </p>
+        <hr />
         <!-- TODO Add form validation -->
         <form name="contact" id="contactForm">
           <div class="form-group">
