--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -13,3 +13,28 @@
   ></span
 >
 </div>
+<!-- Scripting -->
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+  crossorigin="anonymous"
+></script>
+<script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"
+></script>
+<script
+  defer
+  src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"
+></script>
+<script src="js/scripts.js"></script>
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('service-worker.js').then((reg) => {
+        console.log('We found your service worker file!', reg);
+      });
+    });
+  }
+</script>
