--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,7 +5,7 @@
 />
 
 <title>Mark Cross's Portfolio</title>
-<link rel="shortcut icon" type="image/jpg" href="img/favicon.ico" />
+<link rel="shortcut icon" type="image/jpg" href="favicon.ico" />
 <!-- Styling -->
 <link href="css/bootstrap.min.css" rel="stylesheet" />
 <link
@@ -13,20 +13,4 @@
   href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 />
 <link rel="stylesheet" href="css/styles.css" />
-
-<!-- Scripting -->
-<script
-  src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-  crossorigin="anonymous"
-></script>
-<script
-  src="https://code.jquery.com/jquery-3.5.1.min.js"
-  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-  crossorigin="anonymous"
-></script>
-<script
-  defer
-  src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"
-></script>
-<script src="js/scripts.js"></script>
+<link rel="manifest" href="manifest.webmanifest" />
